--- a/web/themes/custom/caesar/templates/patterns/atoms/icon/a-icon.html.twig
+++ b/web/themes/custom/caesar/templates/patterns/atoms/icon/a-icon.html.twig
@@ -1,1 +1,5 @@
-<div {{ attributes }}>[{{ content }}]</div>
+{% set classes = [
+  'a-icon',
+  a_button_modifier,
+] %}
+<div {{ attributes.addClass(classes) }}>[{{ content }}]</div>
