--- a/web/themes/custom/caesar/templates/patterns/molecules/grid/m-grid.html.twig
+++ b/web/themes/custom/caesar/templates/patterns/molecules/grid/m-grid.html.twig
@@ -4,6 +4,6 @@
 
 <div {{ attributes.addClass('m-grid') }}>
   {% for item in items %}
-    <div class="m-grid__item">{{ item }}</div>
+    {{ item }}
   {% endfor %}
 </div>
