--- a/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.html.twig
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.html.twig
@@ -10,8 +10,12 @@
   {% if icon %}
     {% include '@atoms/icon/a-icon.html.twig' ignore missing with {
       'content': icon,
-      'attributes': create_attribute()
+      'attributes': create_attribute().addClass('a-button__icon')
     } only %}
   {% endif %}
-
+  {% if svgSpritePath %}
+    <svg>
+      <use xlink:href="{{ svgSpritePath }}#svg-account-circle"></use>
+    </svg>
+  {% endif %}
 </{{ tag|default('button') }}>
