Browserlist cfg updates

--- a/web/themes/custom/caesar/templates/patterns/atoms/button/atoms.button.styles.css
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/atoms.button.styles.css
@@ -1,6 +1,9 @@
 .a-button {
   background-color: green;
   background-image: url("@images/test.jpg");
+  display: grid;
+  grid-template-columns: 1fr;
+  appearance: none;
 
   &--second {
     background-color: pink;
