--- a/web/themes/custom/caesar/src/css/_fonts.css
+++ b/web/themes/custom/caesar/src/css/_fonts.css
@@ -1,15 +1,7 @@
 @font-face {
-  font-family: Roboto;
-  src: url("@fonts/roboto-400.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: Roboto;
-  src: url("@fonts/roboto-700.woff2") format("woff2");
-  font-weight: 700;
+  font-family: epilogue;
+  src: url("@fonts/Epilogue-VariableFont_wght.ttf") format("truetype-variations");
+  font-weight: 1 999;
   font-style: normal;
   font-display: swap;
 }
