--- a/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.html.twig
+++ b/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.html.twig
@@ -1,15 +1,24 @@
+{%
+  set classes = [
+    'a-menu',
+    modifier is iterable ? modifier|safe_join(' ') : modifier,
+    extra_classes,
+  ]
+%}
+
 {% import _self as menus %}
 
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-      <ul{{ attributes.addClass('a-menu') }}>
+      <ul{{ attributes.addClass(classes) }}>
     {% else %}
-      <ul>
+      <ul class="a-menu__sub a-menu__sub--level--{{ menu_level }}">
     {% endif %}
     {% for item in items %}
-      <li{{ item.attributes.addClass('a-menu__item') }}>
+      {% set item_attributes = item.attributes ? item.attributes.addClass('a-menu__item') : create_attribute({ class:['a-menu__item'] })  %}
+      <li{{ item_attributes }}>
         {{ link(item.title, item.url, { 'class': ['a-menu__link'] }) }}
         {% if item.below %}
           {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
