--- a/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.src.css
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.src.css
@@ -10,6 +10,8 @@
   border: none;
   border-radius: var(--radius-2);
   background-color: var(--a-button-bg);
+  background-image: url("./test.png");
+  background-image: url("./close.SVG");
   font-family: var(--font-body);
   font-size: 14px;
   font-weight: var(--font-weight-9);
