--- a/web/themes/custom/caesar/css/styles.css
+++ b/web/themes/custom/caesar/css/styles.css
@@ -1,12 +1,11 @@
 :root {
-  --font-sans: system-ui, -apple-system, segoe ui, roboto, ubuntu, cantarell, noto sans, sans-serif;
+  --font-sans: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
   --font-size-1: 1rem;
   --font-lineheight-3: 1.5;
 }
 :root {
   --font-body: epilogue, var(--font-sans);
 }
-
 @font-face {
   font-family: epilogue;
   src: url("../fonts/Epilogue-VariableFont_wght.ttf") format("truetype-variations");
