--- a/web/themes/custom/caesar/libraries/splide/splide.css
+++ b/web/themes/custom/caesar/libraries/splide/splide.css
@@ -1,27 +1,1 @@
-@keyframes splide-loading {
-  0% { transform: rotate(0); }
-  100% { transform: rotate(1turn); }
-}
-.splide__track--draggable { -webkit-touch-callout: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; }
-.splide__track--fade > .splide__list > .splide__slide { z-index: 0; margin: 0 !important; opacity: 0; }
-.splide__track--fade > .splide__list > .splide__slide.is-active { z-index: 1; opacity: 1; }
-.splide--rtl { direction: rtl; }
-.splide__track--ttb > .splide__list { display: block; }
-.splide__container { position: relative; box-sizing: border-box; }
-.splide__list { -webkit-backface-visibility: hidden; backface-visibility: hidden; display: flex; height: 100%; margin: 0 !important; padding: 0 !important; }
-.splide.is-initialized:not(.is-active) .splide__list { display: block; }
-.splide__pagination { display: flex; flex-wrap: wrap; align-items: center; justify-content: center; margin: 0; pointer-events: none; }
-.splide__pagination li { display: inline-block; margin: 0; list-style-type: none; pointer-events: auto; line-height: 1; }
-.splide:not(.is-overflow) .splide__pagination { display: none; }
-.splide__progress__bar { width: 0; }
-.splide { position: relative; visibility: hidden; }
-.splide.is-initialized,
-.splide.is-rendered { visibility: visible; }
-.splide__slide { position: relative; flex-shrink: 0; box-sizing: border-box; margin: 0; list-style-type: none !important; -webkit-backface-visibility: hidden; backface-visibility: hidden; }
-.splide__slide img { vertical-align: bottom; }
-.splide__spinner { position: absolute; top: 0; right: 0; bottom: 0; left: 0; display: inline-block; width: 1.25rem; height: 1.25rem; margin: auto; animation: splide-loading 1s linear infinite; border: 0.125rem solid #999; border-left-color: transparent; border-radius: 50%; contain: strict; }
-.splide__sr { position: absolute; overflow: hidden; clip: rect(0 0 0 0); width: 0.0625rem; height: 0.0625rem; margin: -0.0625rem; padding: 0; border: 0; }
-.splide__toggle.is-active .splide__toggle__play,
-.splide__toggle__pause { display: none; }
-.splide__toggle.is-active .splide__toggle__pause { display: inline; }
-.splide__track { position: relative; z-index: 0; overflow: hidden; }
+@keyframes splide-loading{0%{transform:rotate(0)}to{transform:rotate(1turn)}}.splide__track--draggable{-webkit-touch-callout:none;-webkit-user-select:none;-ms-user-select:none;user-select:none}.splide__track--fade>.splide__list>.splide__slide{margin:0!important;opacity:0;z-index:0}.splide__track--fade>.splide__list>.splide__slide.is-active{opacity:1;z-index:1}.splide--rtl{direction:rtl}.splide__track--ttb>.splide__list{display:block}.splide__container{box-sizing:border-box;position:relative}.splide__list{-webkit-backface-visibility:hidden;backface-visibility:hidden;display:flex;height:100%;margin:0!important;padding:0!important}.splide.is-initialized:not(.is-active) .splide__list{display:block}.splide__pagination{align-items:center;display:flex;flex-wrap:wrap;justify-content:center;margin:0;pointer-events:none}.splide__pagination li{display:inline-block;line-height:1;list-style-type:none;margin:0;pointer-events:auto}.splide:not(.is-overflow) .splide__pagination{display:none}.splide__progress__bar{width:0}.splide{position:relative;visibility:hidden}.splide.is-initialized,.splide.is-rendered{visibility:visible}.splide__slide{-webkit-backface-visibility:hidden;backface-visibility:hidden;box-sizing:border-box;flex-shrink:0;list-style-type:none!important;margin:0;position:relative}.splide__slide img{vertical-align:bottom}.splide__spinner{animation:splide-loading 1s linear infinite;border:0.125rem solid #999;border-left-color:transparent;border-radius:50%;bottom:0;contain:strict;display:inline-block;height:1.25rem;left:0;margin:auto;position:absolute;right:0;top:0;width:1.25rem}.splide__sr{clip:rect(0 0 0 0);border:0;height:0.0625rem;margin:-0.0625rem;overflow:hidden;padding:0;position:absolute;width:0.0625rem}.splide__toggle.is-active .splide__toggle__play,.splide__toggle__pause{display:none}.splide__toggle.is-active .splide__toggle__pause{display:inline}.splide__track{overflow:hidden;position:relative;z-index:0}
