Fixed linter and prettier

--- a/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.css
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.css
@@ -4,12 +4,19 @@
  * @preserve
  */
 
-  .a-button {
+:root {
+  --size-3: 1rem;
+  --size-7: 2rem;
+  --radius-2: 0.3125rem;
+  --font-weight-9: 900;
+}
+
+.a-button {
   --a-button-bg: var(--color-light-accent);
   --a-button-color: var(--color-light);
 
-  cursor: pointer;
   padding: var(--size-3) var(--size-7);
+  cursor: pointer;
   text-align: center;
   text-transform: uppercase;
   color: var(--a-button-color);
@@ -23,29 +30,28 @@
   line-height: 1;
 }
 
-  @media (min-width: 1024px) {
-
+@media (min-width: 1024px) {
   .a-button {
-    display: block
+    display: block;
+  }
 }
-  }
 
-  .a-button--second {
-    --a-button-bg: var(--color-light);
-    --a-button-color: var(--color-dark);
+.a-button--second {
+  --a-button-bg: var(--color-light);
+  --a-button-color: var(--color-dark);
 
-    box-shadow: 0 0.1875rem 0.5625rem rgba(57, 20, 0, 0.08);
-  }
+  box-shadow: 0 0.1875rem 0.5625rem rgba(57, 20, 0, 0.08);
+}
 
-  .a-button--third {
-    --a-button-bg: #b550f8;
-    --a-button-color: var(--color-light);
-  }
+.a-button--third {
+  --a-button-bg: #b550f8;
+  --a-button-color: var(--color-light);
+}
 
-  .a-button--fourth {
-    --a-button-bg: transparent;
-    --a-button-color: var(--color-light);
+.a-button--fourth {
+  --a-button-bg: transparent;
+  --a-button-color: var(--color-light);
 
-    padding: calc(var(--size-3) - 0.0625rem) calc(var(--size-7) - 0.0625rem);
-    border: 0.0625rem solid rgba(255, 255, 255, 0.2954);
-  }
+  padding: calc(var(--size-3) - 0.0625rem) calc(var(--size-7) - 0.0625rem);
+  border: 0.0625rem solid rgba(255, 255, 255, 0.2954);
+}
