Manage common assets

--- a/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.html.twig
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.html.twig
@@ -7,4 +7,9 @@
 %}
 <{{ tag|default('button') }}{{ attributes.addClass(classes) }}>
   {{ content }}
+  {% block icon %}
+    {% if icon %}
+      {{ icon }}
+    {% endif %}
+  {% endblock %}
 </{{ tag|default('button') }}>
